--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@skeletonlabs/skeleton": "^3.1.7",
+    "@skeletonlabs/skeleton-react": "^1.2.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
